save image with random directories and random filename (part V)